sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: value i is not a member of Unit
possible cause: maybe a semicolon is missing before `value i'?
		}i = 0
                 ^